import dev.lukebemish.larder.buildtooling.JLinkTask

plugins {
    id 'java'
    id 'build-logic-conventions'
    id 'dev.lukebemish.javac-post-processor'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

group = 'org.example'
version = '0.1.0'

repositories {
    mavenCentral()
    exclusiveContent {
        forRepository {
            maven {
                url = "https://libraries.minecraft.net"
            }
        }
        filter {
            includeGroupAndSubgroups("com.mojang")
        }
    }
}

def dashboardProdDirectory = file("dashboard/dist")
def indicesProdDirectory = file("indices/dist")

tasks.register("npmBuildProd", Exec) {
    executable = file("generate.sh")
    environment("LARDER_ENV", "prod")
    outputs.dirs(dashboardProdDirectory, indicesProdDirectory)
    inputs.files(
        "indices/package-lock.json", "indices/package.json", "indices/postcss.config.mjs",
        "dashboard/package-lock.json", "dashboard/package.json", "dashboard/tsconfig.json", "dashboard/index.html", "dashboard/vite.config.ts"
    )
    inputs.dir("indices/src")
    inputs.dir("dashboard/src")
}

configurations {
    dependencyScope("application")
    resolvable("applicationClasspath") {
        extendsFrom application
        attributes.addAllLater(runtimeClasspath.attributes)
    }
}

tasks.named("jar", Jar) {
    from(fileTree(dashboardProdDirectory)) {
        into("dev/lukebemish/larder/dashboard")
    }
    from(fileTree(indicesProdDirectory)) {
        into("dev/lukebemish/larder/indices")
    }
    // Excluded due to runtime impl generation
    exclude "dev/lukebemish/larder/api/Locations.java"
    dependsOn tasks.npmBuildProd
}

dependencies {
    compileOnly("org.jspecify:jspecify:1.0.0")

    implementation("io.javalin:javalin:7.2.2")
    annotationProcessor("io.javalin.community.openapi:openapi-annotation-processor:7.2.2")
    implementation("io.javalin.community.openapi:javalin-openapi-plugin:7.2.2")
    implementation("io.javalin.community.openapi:javalin-swagger-plugin:7.2.2")
    implementation("io.javalin.community.openapi:javalin-redoc-plugin:7.2.2")
    implementation("org.postgresql:postgresql:42.7.11")
    implementation("org.slf4j:slf4j-simple:2.0.16")
    implementation("tools.jackson.core:jackson-databind:3.2.1")
    implementation("com.fasterxml.uuid:java-uuid-generator:5.2.0")
    implementation("com.ibm.jsonata4java:JSONata4Java:3.0.0")

    implementation("com.github.scribejava:scribejava-apis:8.3.3")
    implementation("io.jsonwebtoken:jjwt-api:0.13.0")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.13.0")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.13.0")

    implementation("io.pebbletemplates:pebble:4.1.2")

    annotationProcessor("dev.lukebemish:polymorphic-signatures:0.1.0")
    compileOnly("dev.lukebemish:polymorphic-signatures:0.1.0")
    implementation("dev.lukebemish:polymorphic-signatures:0.1.0") {
        capabilities {
            requireFeature("utilities")
        }
    }

    application(project(":"))
}

modularize {
    uses["jjwt.impl"] = [
        "io.jsonwebtoken.io.Deserializer",
        "io.jsonwebtoken.io.Serializer"
    ]
}

def modulesToAdd = [
    "jjwt.impl",

    // npm webjars, jdeps doesn't create deps on these
    "swagger.ui",
    "redoc",
    "js.tokens"
]

tasks.named('compileJava', JavaCompile) {
    javacPostProcessor.plugins.add('dev.lukebemish.polymorphic-signatures')
    modularity.inferModulePath = true

    options.javaModuleVersion = project.version.toString()
    options.javaModuleMainClass = 'dev.lukebemish.larder.Larder'
}


tasks.register("jlink", JLinkTask) {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.AMAZON
    }
    modulePath.from(configurations.applicationClasspath)
    mainModule = "dev.lukebemish.larder"
    imageName = project.name
    destinationDirectory = layout.buildDirectory.dir("jlink")
    addModules = modulesToAdd
}

def testEnvMap = [
    LARDER_ENV: "dev",
    LARDER_DB_HOST: "localhost",
    LARDER_DB_PORT: "5432",
    LARDER_DB_NAME: "larder",
    LARDER_DB_USER: "larder",
    LARDER_DB_PASSWORD: "larder",

    LARDER_HOST: "http://localhost:8786",
    LARDER_PORT: "8786",

    LARDER_OIDC_ISSUER: "http://localhost:8282/realms/demo",
    LARDER_OIDC_CLIENT_ID: "larder",
    LARDER_OIDC_CLIENT_SECRET: "M8MoOUmyzBBgRPvUsoAJcMsBZBpSqcNR",

    LARDER_OIDC_ADDITIONAL_SCOPES: "roles",
    LARDER_OIDC_ROLE_ADMIN: "\"admin\" in realm_access.roles",

    LARDER_S3_REGION: "",
    LARDER_S3_ACCESS_KEY_ID: "minioadmin",
    LARDER_S3_SECRET_ACCESS_KEY: "minioadmin",
    LARDER_S3_ENDPOINT: "http://localhost:9000",

    LARDER_FILESYSTEM_BACKEND_LOCATIONS: "./dev-filesystem-backends.json"
]

tasks.register("stopDevDocker", Exec) {
    commandLine("docker", "compose", "-f", "docker-compose.dev.yml", "down")
    workingDir = layout.projectDirectory
    outputs.upToDateWhen { false }
}

tasks.register("startDevDocker", Exec) {
    commandLine("docker", "compose", "-f", "docker-compose.dev.yml", "up", "--remove-orphans", "--detach")
    workingDir = layout.projectDirectory
    outputs.upToDateWhen { false }
    mustRunAfter tasks.stopDevDocker // Prevents anything depending on this from seeing invalid state
}

tasks.register("testDev", JavaExec) {
    environment(testEnvMap)
    workingDir = layout.projectDirectory
    mainModule = "dev.lukebemish.larder"
    classpath(configurations.applicationClasspath)
    javaLauncher = javaToolchains.launcherFor {
        it.languageVersion = JavaLanguageVersion.of(25)
    }
    modulesToAdd.each {
        jvmArgs("--add-modules", it)
    }
    dependsOn tasks.startDevDocker
    outputs.upToDateWhen { false }
}

tasks.register("testJlink", JavaExec) {
    environment(testEnvMap)
    workingDir = layout.projectDirectory
    mainModule = "dev.lukebemish.larder"
    executable = layout.buildDirectory.file("jlink/larder/bin/java").get()
    dependsOn tasks.startDevDocker
    dependsOn tasks.jlink
    outputs.upToDateWhen { false }
}

